# api

./: .env  .env.example  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: ba23c40aac00_.py  e4147b2dc02d_.py  f346c81c022e_.py
public/: auth.html  home.html  index.html  index_auth.html  login.html  register.html
public/static/css/: home.css  index_auth.css  stylesheet.css
public/static/scripts/: auth.js  home.js  index.js  index_auth.js  login.js  register.js
src/: server.py
src/infra/providers/: publisher.py
src/infra/sqlalchemy/: depends.py
src/infra/sqlalchemy/config/: database.py
src/infra/sqlalchemy/models/: models.py
src/infra/sqlalchemy/repository/: auth_user.py
src/routers/: user_routes.py
src/schemas/: schemas.py
